--- a/docker/Makefile
+++ b/docker/Makefile
@@ -12,31 +12,29 @@ help:
 
 build_ros1:
 	@docker buildx build \
-		--push \
 		--file Dockerfile.ros1 \
-		--platform linux/amd64,linux/arm64 \
+		--platform linux/amd64 \
 		--cache-from type=registry,ref=rwthika/acdc:ros1 \
-		--tag rwthika/acdc:ros1 \
+		--tag rwthika/acdc:ros1-ml \
 		.
 
 
 build_ros2:
 	@docker buildx build \
-		--push \
 		--file Dockerfile.ros2 \
-		--platform linux/amd64,linux/arm64 \
+		--platform linux/amd64 \
 		--cache-from type=registry,ref=rwthika/acdc:ros2 \
-		--tag rwthika/acdc:ros2 \
+		--tag rwthika/acdc:ros2-ml \
 		.
 
 pull_ros1:
 	@docker pull rwthika/acdc:ros1
 
 clean_ros1:
-	@docker rmi -f rwthika/acdc:ros1
+	@docker rmi -f rwthika/acdc:ros1-ml
 
 pull_ros2:
 	@docker pull rwthika/acdc:ros2
 
 clean_ros2:
-	@docker rmi -f rwthika/acdc:ros2
+	@docker rmi -f rwthika/acdc:ros2-ml
